# db-chatbot

./: Makefile  README.md  pyproject.toml  rag.ipynb  requirements-dev.txt  requirements.txt
chatbot/: __main__.py
data/: .gitignore  README.md  dbt_project.yml  profiles.yml
data/models/: purchases.sql  schema.yml  stores.sql
data/models/staging/: schema.yml  stg_purchases.sql  stg_stores.sql  stg_usa_states.sql
dbt/: .gitignore  README.md
