[project]
name = "duck-jaffle-ai"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb~=1.0.0",
    "dbt-duckdb~=1.8.1",
    "duckdb_engine~=0.13.0",
    "langchain~=0.2.7",
    "langchain-community~=0.2.7",
]

[tool.uv]
dev-dependencies = ["ipykernel", "nbstripout", "pre-commit"]

[tool.pylint.master]
disable = ["R", "C", "fixme"]
