[project]
name = "db-chatbot"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    # datasets
    "dbt-duckdb~=1.9.1",
    "duckdb~=1.1.3",
    "duckdb_engine~=0.14.2", # SQLAlchemy engine
    # llama-index
    "llama-index~=0.12.10",
    "llama-index-llms-ollama~=0.5.0",
]

[tool.uv]
dev-dependencies = ["ipykernel", "nbstripout", "pre-commit"]

[tool.pylint.master]
disable = ["R", "C", "fixme"]
